--- a/writing/cogsci2018/cogsci2018.Rmd
+++ b/writing/cogsci2018/cogsci2018.Rmd
@@ -119,13 +119,40 @@ FIXME participants with IP addresses in the United States were recruited on Amaz
 
 ### Stimuli and Design
 
-We asked participants to imagine they were children's toy developers. We presented three different toys that look very similar but each work in different ways, and provided instructions for them. *The ButtonMusic toy* instructions were: *"Press the button on the right to play music. Pull the handle on the left to turn on the light. Doing both produces both effects."* "*The HandleMusic toy* instuctions were: *"Pull the handle on the left to play music. Press the button on the right to turn on the light. Doing both produces both effects."* and "*the BothMusicLight toy* instuctions were: *"Pull the handle on the left AND press the button on the right to turn on the light and play music at the same time. The button press or handle pull on its own doesn’t produce any effect."* Each toy had a label showing its name.
+We presented three different toys that look very similar but each work in different ways, 
+and provided instructions for them. 
+The "ButtonMusic" toy instructions were: *"Press the button on the right to play music. Pull the handle on the left to turn on the light. Doing both produces both effects."* 
+The "HandleMusic" toy instuctions were: *"Pull the handle on the left to play music. Press the button on the right to turn on the light. Doing both produces both effects."* 
+The "BothMusicLight" toy instuctions were: *"Pull the handle on the left AND press the button on the right to turn on the light and play music at the same time. The button press or handle pull on its own doesn’t produce any effect."* 
+Each toy had a label showing its name.
 
-We presented a story to the participants that their boss motivated a goal the participants must achieve by acting on the toy. Importantly, the toy was missing its label, such that partcipants could not know whether the toy was a ButtonMusic, HandleMusic, or BothMusicLight toy. In the *learning* condition, the boss said "That must be one of the new toys that you've been working on. But it looks like you forgot to put on the label! Can you figure out whether this toy is a ButtonMusic toy, HandleMusic toy, or BothMusicLight toy?"; in the *performance* condition, the boss said "That must be one of the new toys that you've been working on. I want to hear the music it plays."; and in the *presentation* condition, the boss said "That must be one of the new toys that you've been working on. How does it work?" followed by the prompt "... you only had one chance to impress your boss and show that you're competent ..." Then we asked participants to select one action to try out on the toy: to "press the button", "pull the handle", or "press the button and pull the handle." Each participant was randomly assigned to one of three goal conditions, and shown a randomized order of actions to choose from.
+We presented a story to the participants that motivated a goal the participants must achieve by acting on a given toy. 
+Importantly, the given toy was missing its label, such that partcipants could not know whether the toy was a ButtonMusic, HandleMusic, or BothMusicLight toy. 
+For all the participants, we asked them to imagine that they were a children's toy developer and that one day, their boss approached them and said: 
+"That must be one of the new toys that you've been working on. But it looks like you forgot to put on the label! Can you figure out whether this toy is a ButtonMusic toy, HandleMusic toy, or BothMusicLight toy?" (*learning* condition); 
+"That must be one of the new toys that you've been working on. I want to hear the music it plays." (*performance* condition);
+or "That must be one of the new toys that you've been working on. How does it work?" followed by the prompt "... [Imagine] you only had one chance to impress your boss and show that you're competent ..." (*presentation* condition). 
+We asked participants to select an action they would like to try out on the toy 
+in order to accomplish the specified goal, out of three possible actions: 
+to "press the button", "pull the handle", or "press the button and pull the handle." 
+We randomly assigned each participant to one of the three goal conditions, 
+and randomized the order of actions to choose from.
 
 ### Procedure
 
-Participants were first introduced to the task and shown a picture of a toy with labels on its parts. Then they read instructions for each of the three toys, after which they were asked what they would do to make the toy play music and to make it turn on the light, to make sure they understood the instructions. Participants who answered these manipulation check questions incorrectly were excluded from our final analysis. We then asked participants to rate prior likelihood that an unknown toy is a ButtonMusic toy, HandleMusic toy, or BothMusicLight toy. Participants read a scenario for one of the three goal conditions, and the following instruction: "If you only had one chance to try a SINGLE action to [goal], which action would you want to take? You will get a 10 cent bonus after submitting the HIT if you [goal]." After selecting a response out of three possible actions, the participants were asked again to rate the likelihood for which toy the unlabeled toy was. The experiment can be viewed at https://langcog.stanford.edu/expts/EJY/soc-info/goal_actions_ver2/soc_info_goals.html.
+Participants were first introduced to the task with a picture of a toy with labels on its parts. 
+Then they read instructions for each of the three toys, 
+after which they were asked what they would do to make the toy operate as manipulation check
+(e.g. "How would you make the toy play music?").
+We asked participants to rate prior likelihood that an unknown toy is a ButtonMusic toy, HandleMusic toy, or BothMusicLight toy, to use as priors for our model. 
+Participants then read a scenario for one of the three goal conditions, 
+followed by the question: 
+"If you only had one chance to try a SINGLE action to [goal], which action would you want to take? 
+You will get a 10 cent bonus after submitting the HIT if you [goal]." 
+After selecting one of three possible actions to perform on the toy and 
+seeing that the toy successfully played music, 
+participants were asked again to rate the likelihood that the unlabeled toy was each of the three possible toys. 
+The experiment can be viewed at https://langcog.stanford.edu/expts/EJY/soc-info/goal_actions_ver2/soc_info_goals.html.
 
 # Results
 
