--- a/writing/cogsci2018/cogsci2018.Rmd
+++ b/writing/cogsci2018/cogsci2018.Rmd
@@ -32,9 +32,17 @@ library(xtable)
 
 # Introduction
 
-Learning takes place in social contexts.
+If you were to cook a meal for yourself, do you want to follow the recipe you have tried before, or try a new recipe? The familiar recipe will ensure a good meal, but the new recipe might turn out to be even better, despite some risk that it might not. How would your decision change if the meal was for a date? Or for a charitable cooking teacher?
 
-A simple case study of situations where people have to decide between information gain and self-presentation,
+We often face what is commonly known as "exploration-exploitation dilemma" [@sutton1998], where we need to choose between pursuing an overt, readily accessible reward based on our prior knowledge (*exploitation*) versus pursuing discovery of new knowledge (*exploration*). 
+How do we go about choosing between exploration and exploitation?
+We may consider our goals, and how much we want to achieve each goal relative to others: Do I want to prioritize learning a new way of cooking, or securing a decent meal? 
+There may also be contextual factors at hand: Am I by myself, or is there a person whom I want to impress with a delicious meal?
+In this work, we seek to explain how people may behave given an exploration-exploitation dilemma, by (1) formalizing the tradeoff between an agent's goals for exploration versus exploitation; and (2) considering ways in which the social context (e.g. the presence of another person) may play a role. 
+
+One prominent case study that shows people's exploratory behaviors is *active learning*, or actively constructing their own learning experience by making informative queries or exploring unknown contingencies (FIXME: cite Nelson, sutton). 
+Previous work in active learning have been productive in examining people's information-seeking behaviors, successfully capturing ... FIXME (FIXME: cite?). This line of research however has largely assumed that the learner's goal is only to explore and maximize information gain, and the role of social factors in shaping the learner's goals has not been examined. 
+We present a computational model formalizing the tradeoff between an agent’s exploratory and exploitive goals in an active learning context. The agent’s exploitive goals can be instantiated under two different contexts, with or without the presence of another person. We then look empirical judgments for a simplistic representation of our model across different goals and social contexts (i.e. presence of another person), which we show are consistent with the predictions of the model.
 
 # Computational model
 
