--- a/writing/cogsci2018/cogsci2018.Rmd
+++ b/writing/cogsci2018/cogsci2018.Rmd
@@ -56,13 +56,22 @@ We then look at empirical judgments for a simplistic representation of our model
 
 # Computational model
 
-A key assumption underlying inferences in recent formal models of social cognition is that 
+To start to examine people's exploration-exploitation tradeoff, 
+we situate the model and paradigm in a simplistic learning environment.
+The learner in our model is to act on a toy,
+and can choose between two kinds of actions
+that will each lead to one outcome (new discovery) or the other (overt reward) with certainty.
+The learner's action rests on his goals to explore versus exploit, 
+and is determined in part by the presence or absence of another person he cares about (i.e. his boss)\footnote{From here on, we use a male pronoun for Bob, the learner, and female pronoun for Ann, the observer.}.
+
+A key assumption underlying inferences in recent Bayesian models of human social cognition is that 
 people act approximately optimally given a utility function [e.g. @goodman2016; @jara2016]. 
-Our model operates under the same principle of an approximately optimal agent, 
+Our model adopts the same utility-theoretic approach, and assumes an approximately optimal agent, 
 who reasons about the utility function that represents a combination of multiple goals. 
-In @yoon2017, the utility function comprised a weighted combination of multiple utilities (goals) considered by the speaker, 
+In a recent model of polite language production [@yoon2017], 
+the utility function comprised a weighted combination of multiple utilities (goals) considered by the speaker, 
 reflecting a principled tradeoff between different communicative goals 
-(e.g. to be informative, to make the listener feel good, and to appear to be a helpful speaker). 
+(e.g. to be informative, to be kind, and to appear to be a helpful speaker). 
 We use a similarly structured utility function that reflects 
 different goals that a learner has in a social learning context.
 Specifically, we model how a person may make a decision to act based on 
